--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   Copyright (C) 2015 The Android Open Source Project
 
   Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,27 +16,30 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.android.car.media"
-    android:sharedUserId="com.android.car.media" >
+    android:sharedUserId="com.android.car.media">
 
     <uses-sdk
         android:minSdkVersion="27"
-        android:targetSdkVersion='27'/>
+        android:targetSdkVersion='27' />
 
-    <application android:label="CarMediaApp"
-		android:theme="@style/PSAAppNightTheme"
-        android:icon="@drawable/ic_music">
+    <application
+        android:icon="@drawable/ic_music"
+        android:label="CarMediaApp"
+        android:theme="@style/PSAAppNightTheme">
 
         <meta-data
             android:name="android.car.application"
             android:resource="@xml/automotive_app_desc" />
 
-        <activity android:name=".MediaActivity"
-            android:theme="@style/PSAAppNightTheme"
+        <activity
+            android:name=".MediaActivity"
             android:label="CarMediaApp"
+            android:launchMode="singleTop"
             android:resizeableActivity="true"
-            android:launchMode="singleTop">
+            android:theme="@style/PSAAppNightTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.INFO" />
                 <category android:name="android.intent.category.APP_MUSIC" />
             </intent-filter>
