[MediaPlayer] playlist screen added
Deleted aar files usage
One model for all media fragments (from activity) is used now
Playlist fragment and layout added
Show artwork from icon Uri in metadata
Syncronize shuffle and repeat states in fragments through playback model
Count progress in secs instead of milisecs

Jira#PSAACPOC-117 PSAACPOC-233

Change-Id: I26b8d339bd468a70fba529f85e8b86e9cef885f3

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,7 +25,8 @@
     <application
         android:icon="@drawable/ic_music"
         android:label="CarMediaApp"
-        android:theme="@style/PSAAppNightTheme">
+        android:theme="@style/PSAAppNightTheme"
+        android:largeHeap="true">
 
         <meta-data
             android:name="android.car.application"
