--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,8 @@
     package="com.android.car.media"
     android:sharedUserId="com.android.car.media">
 
+    <uses-permission android:name="android.permission.MANAGE_USERS" />
+
     <uses-sdk
         android:minSdkVersion="27"
         android:targetSdkVersion='27' />
