--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
     android:sharedUserId="com.android.car.media">
 
     <uses-permission android:name="android.permission.MANAGE_USERS" />
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <uses-sdk
         android:minSdkVersion="27"
