[CarLauncher][Widget] Expand 4x2 widget (activity view) to full screen
added button to expand activityView

Jira#PSAACPOC-311

Change-Id: I5ef3e695e79dc92c34ecdd9606b82cc165102333

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,6 +47,7 @@
             android:exported="true"
             android:label="CarMediaApp"
             android:resizeableActivity="true"
+            android:configChanges="screenLayout|screenSize"
             android:supportsPictureInPicture="true"
             android:theme="@style/PSAAppNightTheme">
             <intent-filter>
