[CarMedia] required changes for day/night theme
Removed day/night themes from styles folder
Changed all attr to cloros where it's required

Jira# PSAACPOC-328
Depends on change-id I91a1e7ac72cc83eb5e5eb8fdd1f09d32ba15ce08

Change-Id: I24c799c8a9969a8982723ca68969bbe473de5d01

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,7 @@
         android:persistent="true"
         android:resizeableActivity="true"
         android:supportsPictureInPicture="true"
-        android:theme="@style/PSAAppNightTheme">
+        android:theme="@style/AppTheme">
 
         <meta-data
             android:name="android.car.application"
@@ -50,7 +50,7 @@
             android:label="CarMediaApp"
             android:resizeableActivity="true"
             android:supportsPictureInPicture="true"
-            android:theme="@style/PSAAppNightTheme">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
