--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,7 +45,7 @@
         <activity
             android:name=".MediaActivity"
             android:allowEmbedded="true"
-            android:configChanges="screenLayout|screenSize"
+            android:configChanges="screenLayout|screenSize|smallestScreenSize|density"
             android:exported="true"
             android:label="CarMediaApp"
             android:resizeableActivity="true"
@@ -66,6 +66,7 @@
             </intent-filter>
         </activity>
         <service android:name="com.android.car.usb.PSAUsbStateService" />
+        <service android:name=".service.CarMediaLayoutService" android:enabled="true" android:exported="true" />
 
         <receiver
             android:name=".widget.MediaWidget2x1"
