--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,6 +18,7 @@
     package="com.android.car.media"
     android:sharedUserId="com.android.car.media">
 
+    <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL"/>
     <uses-permission android:name="android.permission.MANAGE_USERS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -132,6 +133,12 @@
         <meta-data
             android:name="com.harman.psa.magic_touch_action_shuffle_play_item"
             android:resource="@string/psa_edge_shuffle_play_item_action" />
+
+        <provider
+            android:name=".storage.MediaSourceContentProvider"
+            android:authorities="com.android.car.media.provider"
+            android:exported="true"
+            android:permission="com.android.car.media.provider.READ_WRITE"/>
 
 
     </application>
